--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.10.0",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
